# imu-analysis

./: .gitignore  .gpscm  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt  main.cpp
bindings/cython/: imuanalysis.cpp  imuanalysis.pxd  imuanalysis.pyx  setup.py
example/: CMakeLists.txt  example.cpp  gpmf_metadata.h  gpmf_parser.c  main.cpp
gpmf/: CMakeLists.txt  Makefile  cmake_install.cmake  gpmf_parser.h
include/: generic.h  gp5imu_Madgwick.h  gp5imu_Madwick.h  mountainbiking.h  skateboarding.h  snowboard.h  snowboarding.h  surfing.h  tools.h  types.h
src/: generic.cpp  gp5imu_Madgwick.cpp  mountainbiking.cpp  skateboarding.cpp  snowboard.cpp  snowboarding.cpp  surfing.cpp  tools.cpp  types.cpp
tests/: CMakeLists.txt  tests.cpp
